--- a/.github/workflows/vib-build.yml
+++ b/.github/workflows/vib-build.yml
@@ -6,7 +6,7 @@ on:
 env:
     REGISTRY_USER: ${{ github.actor }}
     REGISTRY_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
-    BRANCH_NAME: "main"
+    BRANCH_NAME: "flathub"
 
 jobs:
 
